--- a/notebooks/xgb_ensemble-all.ipynb
+++ b/notebooks/xgb_ensemble-all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -200,40 +200,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-logloss:0.637037\tvalid-logloss:0.640462\n",
+      "[0]\ttrain-logloss:0.637226\tvalid-logloss:0.640819\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[131]\ttrain-logloss:0.044452\tvalid-logloss:0.160958\n",
+      "[106]\ttrain-logloss:0.05565\tvalid-logloss:0.160475\n",
       "\n",
-      "[0]\ttrain-logloss:0.637773\tvalid-logloss:0.640521\n",
+      "[0]\ttrain-logloss:0.637991\tvalid-logloss:0.64016\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[92]\ttrain-logloss:0.067027\tvalid-logloss:0.164897\n",
+      "[139]\ttrain-logloss:0.046233\tvalid-logloss:0.155309\n",
       "\n",
-      "[0]\ttrain-logloss:0.637336\tvalid-logloss:0.63899\n",
+      "[0]\ttrain-logloss:0.638054\tvalid-logloss:0.638957\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 30 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[82]\ttrain-logloss:0.073132\tvalid-logloss:0.17032\n",
+      "[82]\ttrain-logloss:0.073214\tvalid-logloss:0.164798\n",
       "\n",
-      "local average valid loss 0.169251661052 val loss std 0.0059555521926\n",
+      "local average valid loss 0.164491653931 val loss std 0.00222371750435\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.013630\n",
-      "1  4023181e    0.943625\n",
-      "2  b20200e4    0.034760\n",
-      "3  e7f018bb    0.997943\n",
-      "4  4371c8c3    0.180082\n",
+      "0  5941774d    0.014898\n",
+      "1  4023181e    0.973667\n",
+      "2  b20200e4    0.032781\n",
+      "3  e7f018bb    0.997836\n",
+      "4  4371c8c3    0.360779\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.013585\n",
-      "1  4023181e    0.942700\n",
-      "2  b20200e4    0.033894\n",
-      "3  e7f018bb    0.997963\n",
-      "4  4371c8c3    0.178451\n"
+      "0  5941774d    0.014824\n",
+      "1  4023181e    0.973603\n",
+      "2  b20200e4    0.032537\n",
+      "3  e7f018bb    0.997847\n",
+      "4  4371c8c3    0.360011\n"
      ]
     }
    ],
@@ -243,20 +243,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-logloss:0.637974\tvalid-logloss:0.642246\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[91]\ttrain-logloss:0.071796\tvalid-logloss:0.162532\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637771\tvalid-logloss:0.639782\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[89]\ttrain-logloss:0.076378\tvalid-logloss:0.139515\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637343\tvalid-logloss:0.639148\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[67]\ttrain-logloss:0.088657\tvalid-logloss:0.182237\n",
+      "\n",
+      "[0]\ttrain-logloss:0.638715\tvalid-logloss:0.6402\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[120]\ttrain-logloss:0.057528\tvalid-logloss:0.137976\n",
+      "\n",
+      "[0]\ttrain-logloss:0.638106\tvalid-logloss:0.640056\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[84]\ttrain-logloss:0.076952\tvalid-logloss:0.156988\n",
+      "\n",
+      "local average valid loss 0.158634848648 val loss std 0.0163733730446\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.021602\n",
+      "1  4023181e    0.941287\n",
+      "2  b20200e4    0.036983\n",
+      "3  e7f018bb    0.997476\n",
+      "4  4371c8c3    0.309535\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.021653\n",
+      "1  4023181e    0.941346\n",
+      "2  b20200e4    0.035380\n",
+      "3  e7f018bb    0.997517\n",
+      "4  4371c8c3    0.315288\n"
+     ]
+    }
+   ],
    "source": [
-    "#cv_test(5,42,True)"
+    "cv_test(5,42,True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\ttrain-logloss:0.637348\tvalid-logloss:0.639638\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[131]\ttrain-logloss:0.053228\tvalid-logloss:0.173151\n",
+      "\n",
+      "[0]\ttrain-logloss:0.638628\tvalid-logloss:0.639263\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[131]\ttrain-logloss:0.055261\tvalid-logloss:0.159666\n",
+      "\n",
+      "[0]\ttrain-logloss:0.638601\tvalid-logloss:0.641489\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[119]\ttrain-logloss:0.060684\tvalid-logloss:0.148\n",
+      "\n",
+      "[0]\ttrain-logloss:0.638396\tvalid-logloss:0.638139\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[230]\ttrain-logloss:0.028998\tvalid-logloss:0.097023\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637836\tvalid-logloss:0.640585\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[45]\ttrain-logloss:0.118542\tvalid-logloss:0.201026\n",
+      "\n",
+      "[0]\ttrain-logloss:0.638405\tvalid-logloss:0.638111\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[108]\ttrain-logloss:0.06979\tvalid-logloss:0.148082\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637826\tvalid-logloss:0.640632\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[143]\ttrain-logloss:0.051037\tvalid-logloss:0.158598\n",
+      "\n",
+      "[0]\ttrain-logloss:0.638604\tvalid-logloss:0.638487\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[113]\ttrain-logloss:0.066151\tvalid-logloss:0.119007\n",
+      "\n",
+      "[0]\ttrain-logloss:0.637381\tvalid-logloss:0.640217\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[75]\ttrain-logloss:0.088903\tvalid-logloss:0.163556\n",
+      "\n",
+      "[0]\ttrain-logloss:0.638129\tvalid-logloss:0.637242\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[74]\ttrain-logloss:0.090895\tvalid-logloss:0.149874\n",
+      "\n",
+      "local average valid loss 0.155968583582 val loss std 0.027117479142\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.022256\n",
+      "1  4023181e    0.958344\n",
+      "2  b20200e4    0.031333\n",
+      "3  e7f018bb    0.998115\n",
+      "4  4371c8c3    0.307578\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.021033\n",
+      "1  4023181e    0.960039\n",
+      "2  b20200e4    0.028916\n",
+      "3  e7f018bb    0.998280\n",
+      "4  4371c8c3    0.311840\n"
+     ]
+    }
+   ],
    "source": [
-    "#cv_test(10,42,True)"
+    "cv_test(10,42,True)"
    ]
   }
  ],
